--- a/s/css/main.css
+++ b/s/css/main.css
@@ -485,9 +485,10 @@ h4.modal-title {
   line-height:21px;
 }
 
-/*#results thead {
-  position: fixed;
-}*/
+#results thead {
+  /*position: fixed;*/
+  width: 100%;
+}
 
 #results tr {
   border: none;
