--- a/mac/dbHero/Base.lproj/MainMenu.xib
+++ b/mac/dbHero/Base.lproj/MainMenu.xib
@@ -279,6 +279,28 @@
                         </items>
                     </menu>
                 </menuItem>
+                <menuItem title="View" id="nvc-T9-xMz" userLabel="View">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <menu key="submenu" title="View" id="wMk-HT-d2K">
+                        <items>
+                            <menuItem title="Actual Size" keyEquivalent="0" id="not-zG-iIc" userLabel="Default Zoom">
+                                <connections>
+                                    <action selector="actualSize:" target="Voe-Tx-rLC" id="Hdb-gq-IVR"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Zoom In" keyEquivalent="=" id="7hJ-gy-jjR" userLabel="Zoom In">
+                                <connections>
+                                    <action selector="zoomIn:" target="Voe-Tx-rLC" id="Yvk-Np-Chy"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Zoom Out" keyEquivalent="-" id="l71-Ss-C3O" userLabel="Zoom Out">
+                                <connections>
+                                    <action selector="zoomOut:" target="Voe-Tx-rLC" id="gX4-c4-gjf"/>
+                                </connections>
+                            </menuItem>
+                        </items>
+                    </menu>
+                </menuItem>
                 <menuItem title="Window" id="aUF-d1-5bR">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
