--- a/sass/main.scss
+++ b/sass/main.scss
@@ -199,7 +199,7 @@ body {
   font-size: 12px;
   top: 30px;
   right: 15px;
-  height: 140px;
+  /*height: 140px;*/
   bottom: 0px;
   width: 150px;
   color: #0000ff;
