--- a/sass/main.scss
+++ b/sass/main.scss
@@ -510,22 +510,32 @@ div#output.empty {
   height: 100%;
 }
 
+#sidebar-modal-results {
+  min-height: 200px;
+  min-width: 500px;
+}
+
+#sidebar-modal-results thead,
 #results thead {
   width: 100%;
 }
 
+#sidebar-modal-results tr,
 #results tr {
   border: none;
 }
 
+#sidebar-modal-results tr:nth-child(even) > td,
 #results tr:nth-child(even) > td {
   background:#ECF0F1;
 }
 
+#sidebar-modal-results tr:nth-child(odd) > td,
 #results tr:nth-child(odd) > td {
   background: #fff;
 }
 
+#sidebar-modal-results th,
 #results th {
   background:#4592EA;
   padding: 3px 9px;
@@ -535,22 +545,13 @@ div#output.empty {
   -webkit-font-smoothing: antialiased;
 }
 
+#sidebar-modal-results tbody tr:hover td,
 #results tbody tr:hover td {
   background: #c5e2fc;
   opacity: 0.8;
 }
 
-/*#results tr.selected td {
-  background: #3874d7 !important;
-  color: #fff !important;
-}*/
-
-/*#results td {
-  color: #5B5C59;
-  vertical-align: middle;
-  border: 0px none;
-}
-*/
+#sidebar-modal-results td div,
 #results td div {
   padding: 0px 10px;
   max-width: 350px;
@@ -560,25 +561,32 @@ div#output.empty {
   white-space: pre;
 }
 
+/* Is this being used?*/
+#sidebar-modal-results td div span.null,
 #results td div span.null {
   color: #bbb;
   text-transform: uppercase;
 }
 
+/* Is this being used?*/
+#sidebar-modal-results td textarea,
 #results td textarea {
   color: #5B5C59 !important;
   font-size: 12px;
 }
 
+div#sidebar-modal-results.table.empty.no-crop,
 div#results.table.empty.no-crop {
   margin: 10px;
   max-width: none;
 }
 
+#sidebar-modal-results tr.foot,
 #results tr.foot {
   background:#4592EA;
 }
 
+#sidebar-modal-results td.foot,
 #results td.foot {
   padding:0px;
   background:transparent;
@@ -586,10 +594,12 @@ div#results.table.empty.no-crop {
   color:#fff;
 }
 
+#sidebar-modal-results th:focus,
 #results th:focus {
   outline:0;
 }
 
+#sidebar-modal-results th.reactable-header-sort-desc:after,
 #results th.reactable-header-sort-desc:after {
   content: '\25B2';
   font-size: 12px;
@@ -597,6 +607,7 @@ div#results.table.empty.no-crop {
   /*float: right;*/
 }
 
+#sidebar-modal-results th.reactable-header-sort-asc:after,
 #results th.reactable-header-sort-asc:after {
   content: '\25BC';
   font-size: 10px;
@@ -604,6 +615,7 @@ div#results.table.empty.no-crop {
   /*float: right;*/
 }
 
+#sidebar-modal-results tbody.reactable-data,
 #results tbody.reactable-data {
   margin-bottom: 0;
 }
@@ -640,50 +652,6 @@ a.disabled {
   text-decoration: none;
   opacity: 0.4;
 }
-
-/*
-#results a.reactable-previous-page,
-#results a.griddle-page,
-#results a.griddle-next{
-  float:left;
-  width:33%;
-  min-height:1px;
-  margin-top:5px;
-  margin-bottom: 5px;
-}
-
-.griddle a.reactable-next-page{
-  text-align:right;
-  margin-right: 5px;
-}
-
-.reactable-page-button {
-  text-align:center;
-  margin-top:6px;
-  margin-left: 5px;
-  margin-right: 2px;
-  margin-bottom: 6px;
-  padding: 3px;
-  width: 30px;
-  float: left;
-  cursor: pointer;
-  color: #000;
-  border: 1px solid #AAA;
-  background-color: #EEE;
-  text-align: center;
-  border-radius: 5px;
-}
-
-.reactable-page-button:hover {
-  text-decoration: none;
-  opacity: 0.8;
-}
-
-.reactable-current-page {
-  background-color: #DDD;
-  cursor: default;
-}
-*/
 
 #custom-query {
   height: 200px;
