--- a/sass/main.scss
+++ b/sass/main.scss
@@ -513,6 +513,7 @@ div#output.empty {
 #sidebar-modal-results {
   min-height: 200px;
   min-width: 500px;
+  font-size: 12px
 }
 
 #sidebar-modal-results thead,
