better color for dragbars

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -341,7 +341,7 @@ body {
 
 #side-dragbar {
   position: absolute;
-  background-color: #95b8f1;
+  background-color: #377CE4;
   min-height: 100%;
   /*float: right;*/
   width: 3px;
@@ -351,7 +351,7 @@ body {
 
 .query-content-dragbar {
   position: absolute;
-  background-color: #95b8f1;
+  background-color: #377CE4;
   min-width: 100%;
   /*float: right;*/
   height: 3px;
