--- a/sass/main.scss
+++ b/sass/main.scss
@@ -507,7 +507,7 @@ div#output.empty {
   overflow: auto;
   margin-bottom: 29px;
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 #sidebar-modal-results {
