--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -17,7 +17,9 @@ $col-blue-a700: #2962FF;
 
 html, body {
   height: 100%;
+  max-height: 100vh;
 }
+
 .bg-col-50 {
   background-color: $col-blue-50;
 }
@@ -63,6 +65,7 @@ html, body {
   @include flex-y;
 
   height: 100%;
+  max-height: 100%;
   background-color: $col-blue-100;
 }
 
@@ -153,7 +156,20 @@ html, body {
 
 #results {
   background-color: $col-blue-100;
-  flex-grow: 8;
+  flex-grow: 2;
+}
+
+#results-inner {
+  @include flex-x;
+  flex-wrap: nowrap;
+  background-color: $col-blue-200;
+  overflow: scroll;
+}
+
+#results-col {
+  background-color: $col-blue-a400;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 #results-nav {
@@ -166,4 +182,8 @@ html, body {
 
 #query-text {
   flex-grow: 2;
+}
+
+#results-table {
+  overflow: scroll;
 }
