--- a/website/www/style.css
+++ b/website/www/style.css
@@ -93,6 +93,7 @@ nav {
   /*border-bottom: 2px solid #4aa7ff;*/
   padding: 4px 12px;
   background-color: #BAD8F5;
+  border-radius: 12px;
   /* border-bottom: 2px solid #115594; */
 }
 
