pagination bar embedded to bottom

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -474,7 +474,7 @@ h4.modal-title {
   margin: 0px;
   padding: 0px;
   overflow: auto;
-  margin-bottom: 29px;
+  margin-bottom: 21px;
 }
 
 #output div.reactable-filterer {
@@ -626,7 +626,7 @@ div.reactable-pagination-button-container {
   background-color: #4592EA;
   width: 100%;
   font-size: 12px;
-  bottom: 8px;
+  bottom: 0;
   padding: 2px;
 }
 
