progress on fronted edit cell

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -552,8 +552,8 @@ div#output.empty {
   opacity: 0.8;
 }
 
-#sidebar-modal-results td div,
-#results td div {
+#sidebar-modal-results td,
+#results td {
   padding: 0px 10px;
   max-width: 350px;
   max-height: 51px;
