--- a/sass/main.scss
+++ b/sass/main.scss
@@ -489,7 +489,7 @@ h4.modal-title {
   background-color: #fff;
   padding: 4px 6px;
   border: 1px solid #D1D1D1;
-  border-radius: 4px;
+  border-radius: 5px;
   margin-left: 10px;
   margin-top: 7px;
 }
@@ -665,21 +665,38 @@ a.disabled {
 #query_edit_bar {
   font-size: 12px;
   position: fixed;
-  background-color: red;
+  background-color: #7DCED2;
   bottom: 21px;
   width: 100%;
+  height: 30px;
+}
+
+#query_edit_bar button {
+  position: fixed;
+  border: none;
+  box-shadow: none;
+  background: #3B8686;
+  color: #fff;
+  border: none;
+  box-shadow: none;
+  font-size: 12px;
+  padding: 1px;
+  margin-top: 6px;
+  border-radius: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 #query_edit_bar button.discard_changes {
-  background-color: blue;
+  margin-left: 10px;
 }
 
 #query_edit_bar button.sql_preview {
-  background-color: green;
+  right: 120px;
 }
 
 #query_edit_bar button.save_changes {
-  background-color: yellow;
+  right: 10px;
 }
 
 
