textarea css made better

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -563,7 +563,8 @@ div#output.empty {
 }
 
 #results td textarea {
-  width: 100%;
+  width: 95%;
+  margin-top: 4px;
 }
 
 /* Is this being used?*/
