--- a/sass/main.scss
+++ b/sass/main.scss
@@ -964,20 +964,14 @@ select#db_type.form-control.input-sm {
     box-shadow: 0 0 5px black;
 }
 
-@-webkit-keyframes slideDown {
-    0%, 100% { -webkit-transform: translateY(-40px); }
-    10%, 90% { -webkit-transform: translateY(0px); }
-}
-@-moz-keyframes slideDown {
-    0%, 100% { -moz-transform: translateY(-40px); }
-    10%, 90% { -moz-transform: translateY(0px); }
+@keyframes slideDown {
+    0%, 100% { transform: translateY(-40px); }
+    10%, 90% { transform: translateY(0px); }
 }
 
 .cssanimations.csstransforms #alert-bar {
-    -webkit-transform: translateY(-40px);
-    -webkit-animation: slideDown 2.5s 1.0s 1 ease forwards;
-    -moz-transform:    translateY(-40px);
-    -moz-animation:    slideDown 2.5s 1.0s 1 ease forwards;
+    transform:    translateY(-40px);
+    animation:    slideDown 2.5s 1.0s 1 ease forwards;
 }
 
 .cssanimations.csstransforms #close {
@@ -1013,48 +1007,39 @@ select#db_type.form-control.input-sm {
   background-color: #333;
 
   border-radius: 100%;
-  -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
   animation: bouncedelay 1.2s infinite ease-in-out;
   /* Prevent first frame from flickering when animation starts */
-  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
-.circle2  { -webkit-transform: rotate(30deg);  transform: rotate(30deg)  }
-.circle3  { -webkit-transform: rotate(60deg);  transform: rotate(60deg)  }
-.circle4  { -webkit-transform: rotate(90deg);  transform: rotate(90deg)  }
-.circle5  { -webkit-transform: rotate(120deg); transform: rotate(120deg) }
-.circle6  { -webkit-transform: rotate(150deg); transform: rotate(150deg) }
-.circle7  { -webkit-transform: rotate(180deg); transform: rotate(180deg) }
-.circle8  { -webkit-transform: rotate(210deg); transform: rotate(210deg) }
-.circle9  { -webkit-transform: rotate(240deg); transform: rotate(240deg) }
-.circle10 { -webkit-transform: rotate(270deg); transform: rotate(270deg) }
-.circle11 { -webkit-transform: rotate(300deg); transform: rotate(300deg) }
-.circle12 { -webkit-transform: rotate(330deg); transform: rotate(330deg) }
+.circle2  { transform: rotate(30deg)  }
+.circle3  { transform: rotate(60deg)  }
+.circle4  { transform: rotate(90deg)  }
+.circle5  { transform: rotate(120deg) }
+.circle6  { transform: rotate(150deg) }
+.circle7  { transform: rotate(180deg) }
+.circle8  { transform: rotate(210deg) }
+.circle9  { transform: rotate(240deg) }
+.circle10 { transform: rotate(270deg) }
+.circle11 { transform: rotate(300deg) }
+.circle12 { transform: rotate(330deg) }
 
-.circle2:before  { -webkit-animation-delay: -1.1s; animation-delay: -1.1s }
-.circle3:before  { -webkit-animation-delay: -1.0s; animation-delay: -1.0s }
-.circle4:before  { -webkit-animation-delay: -0.9s; animation-delay: -0.9s }
-.circle5:before  { -webkit-animation-delay: -0.8s; animation-delay: -0.8s }
-.circle6:before  { -webkit-animation-delay: -0.7s; animation-delay: -0.7s }
-.circle7:before  { -webkit-animation-delay: -0.6s; animation-delay: -0.6s }
-.circle8:before  { -webkit-animation-delay: -0.5s; animation-delay: -0.5s }
-.circle9:before  { -webkit-animation-delay: -0.4s; animation-delay: -0.4s }
-.circle10:before { -webkit-animation-delay: -0.3s; animation-delay: -0.3s }
-.circle11:before { -webkit-animation-delay: -0.2s; animation-delay: -0.2s }
-.circle12:before { -webkit-animation-delay: -0.1s; animation-delay: -0.1s }
-
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0.0) }
-  40% { -webkit-transform: scale(1.0) }
-}
+.circle2:before  { animation-delay: -1.1s }
+.circle3:before  { animation-delay: -1.0s }
+.circle4:before  { animation-delay: -0.9s }
+.circle5:before  { animation-delay: -0.8s }
+.circle6:before  { animation-delay: -0.7s }
+.circle7:before  { animation-delay: -0.6s }
+.circle8:before  { animation-delay: -0.5s }
+.circle9:before  { animation-delay: -0.4s }
+.circle10:before { animation-delay: -0.3s }
+.circle11:before { animation-delay: -0.2s }
+.circle12:before { animation-delay: -0.1s }
 
 @keyframes bouncedelay {
   0%, 80%, 100% {
-    -webkit-transform: scale(0.0);
     transform: scale(0.0);
   } 40% {
-    -webkit-transform: scale(1.0);
     transform: scale(1.0);
   }
 }
