pop over style changed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -710,6 +710,11 @@ a.disabled {
   right: 10px;
 }
 
+.div.Popover {
+  justify-content: center;
+  align-items: center;
+}
+
 .Popover-body {
   padding: 4rem;
   display: -webkit-inline-box;
