--- a/sass/main.scss
+++ b/sass/main.scss
@@ -84,22 +84,49 @@ body {
   border-left: none;
 }
 
-#edit_connection {
-  background-color: #ffffff;
-  color: #6c6b6b;
-  border-width: 1px;
-  border-color: #cacaca;
+#nav button.feedback-button {
+  font-size: 12px;
+  color: #fff;
+  background: #1856b4;
   position: fixed;
   right: 12px;
   top: 13px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
-#edit_connection:hover {
+#nav button.feedback-button:hover {
   opacity: 0.8;
 }
 
-#edit_connection i {
-  margin-right: 4px;
+.modal-body {
+  padding-bottom: 0;
+}
+
+.modal-body div.container {
+  width: 100%;
+  font-size: 12px;
+}
+
+.modal-body div.row {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.modal-body div.row input {
+  width: 200px;
+}
+
+.modal-body div.row button {
+  background-color: #377CE4;
+  color: #ffffff;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.modal-body div.row textarea {
+  width: 100%;
+  height: 100px;
 }
 
 /*******************************************************/
