--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,14 +85,21 @@ body {
 }
 
 #nav button.feedback-button {
+  line-height: 30px;
+  height: 30px;
+  padding: 0px 13px;
+  margin: 0px;
   font-size: 12px;
   color: #fff;
+  border: none;
+  box-shadow: none;
   background: #1856b4;
+  float: left;
+  margin-right: 10px;
   position: fixed;
   right: 12px;
-  top: 13px;
-  padding-right: 15px;
-  padding-left: 15px;
+  top: 10px;
+  border-radius: 3px;
 }
 
 #nav button.feedback-button:hover {
