--- a/sass/main.scss
+++ b/sass/main.scss
@@ -699,27 +699,42 @@ a.disabled {
 }
 
 #query_edit_bar {
-  font-size: 12px;
+  /*font-size: 12px;
   position: fixed;
   background-color: #7DCED2;
-  bottom: 21px;
+  top: 200px;
   width: 100%;
-  height: 30px;
+  height: 50px;*/
+  position: fixed;
+  top: 200px;
+  font-size: 12px;
 }
 
 #query_edit_bar div.row_number {
   position: fixed;
-  color: #fff;
   font-size: 12px;
   padding: 1px;
-  margin-top: 6px;
+  margin-top: 11px;
   padding-left: 8px;
   padding-right: 8px;
-  margin-left: 130px;
+  margin-left: 250px;
+  line-height: 30px;
 }
 
 #query_edit_bar button {
   position: fixed;
+  height: 30px;
+  padding: 0px 13px;
+  margin: 0px;
+  font-size: 12px;
+  color: #fff;
+  border: none;
+  box-shadow: none;
+  line-height: 30px;
+  background: #1856b4;
+  margin-top: 11px;
+  border-radius: 3px;
+  /*position: fixed;
   background: #3B8686;
   color: #fff;
   border: none;
@@ -729,19 +744,32 @@ a.disabled {
   margin-top: 6px;
   border-radius: 5px;
   padding-left: 8px;
-  padding-right: 8px;
-}
-
-#query_edit_bar button.discard_changes {
-  margin-left: 10px;
-}
-
-#query_edit_bar button.sql_preview {
-  right: 120px;
+  padding-right: 8px;*/
 }
 
 #query_edit_bar button.save_changes {
-  right: 10px;
+  margin-left: 10px;
+}
+
+#query_edit_bar button.discard_changes {
+  margin-left: 125px;
+}
+
+#query_edit_bar div.sql_preview {
+  position: fixed;
+  color: #6EACE3;
+  font-weight: 800;
+  font-size: 12px;
+  padding: 1px;
+  margin-top: 11px;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-left: 340px;
+  line-height: 30px;
+}
+
+#query_edit_bar button:hover {
+    opacity: 0.8;
 }
 
 .div.Popover {
