discard button background color is red

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -753,6 +753,7 @@ a.disabled {
 
 #query_edit_bar button.discard_changes {
   margin-left: 125px;
+  background: #C81D25;
 }
 
 #query_edit_bar div.sql_preview {
