make it look like a link

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -767,6 +767,7 @@ a.disabled {
   padding-right: 8px;
   margin-left: 340px;
   line-height: 30px;
+  cursor: pointer;
 }
 
 #query_edit_bar button:hover {
