--- a/sass/main.scss
+++ b/sass/main.scss
@@ -106,36 +106,6 @@ body {
   opacity: 0.8;
 }
 
-.modal-body {
-  padding-bottom: 0;
-}
-
-.modal-body div.container {
-  width: 100%;
-  font-size: 12px;
-}
-
-.modal-body div.row {
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.modal-body div.row input {
-  width: 200px;
-}
-
-.modal-body div.row button {
-  background-color: #377CE4;
-  color: #ffffff;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.modal-body div.row textarea {
-  width: 100%;
-  height: 100px;
-}
-
 /*******************************************************/
 /* Sidebar */
 
@@ -1096,6 +1066,41 @@ select#db_type.form-control.input-sm {
 }
 
 /***********************************************************/
+/* Modal */
+
+.modal-header button.close {
+  margin-top: -10px;
+}
+
+.modal-body {
+  padding-bottom: 0;
+}
+
+.modal-body div.container {
+  width: 100%;
+  font-size: 12px;
+}
+
+.modal-body div.row {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.modal-body div.row input {
+  width: 200px;
+}
+
+.modal-body div.row button {
+  background-color: #377CE4;
+  color: #ffffff;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.modal-body div.row textarea {
+  width: 100%;
+  height: 100px;
+}
 
 div.ReactModal__Overlay {
   z-index: 1;
