--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import 'normalize';
 
-/* Text Color: #5B5C59 */
-/* Blue      : #377CE4 */
+$col-text: #5B5C59;
+$col-bg: #377CE4;
 
 html {
     height:100%;
@@ -11,11 +11,7 @@ body {
    font-family: "Open Sans", "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 }
 
-/*
-#main {
-
-}
-*/
+// #main { }
 
 #nav {
   position: relative;
@@ -45,7 +41,6 @@ body {
   line-height: 50px;
   font-size: 12px;
   padding: 0px 22px;
-  color: #6c6b6b;
   font-weight: 500;
   margin: 0 1px;
   cursor: pointer;
@@ -129,7 +124,7 @@ body {
   padding-left: 15px;
   color: #efefef;
   font-size: 14px;
-  background-color: #377CE4;
+  background-color: $col-bg;
   margin-left: auto;
   margin-right: auto;
   /*text-overflow: ellipsis;*/
@@ -259,7 +254,7 @@ body {
   padding-left: 15px;
   color: #efefef;
   font-size: 14px;
-  background-color: #377CE4;
+  background-color: $col-bg;
   margin-left: auto;
   margin-right: auto;
   /*text-overflow: ellipsis;*/
@@ -281,17 +276,17 @@ body {
   padding: 0 8px 0 12px;
   font-size: 12px;
   cursor: default;
-  color: #5B5C59 !important;
+  color: $col-text !important;
 }
 
 #sidebar div.table-information ul li span {
-  color: #5B5C59;
+  color: $col-text;
   min-width: 0;
   padding-left: 0px;
 }
 
 #sidebar div.table-information ul li span.table-info-light {
-    color: #5B5C59;
+    color: $col-text;
 }
 
 #sidebar ul {
@@ -308,7 +303,7 @@ body {
   margin: 0px;
   cursor: pointer;
   font-size: 12px;
-  color: #5B5C59;
+  color: $col-text;
   line-height: 25px;
   white-space: nowrap;
 }
@@ -317,14 +312,14 @@ body {
 #sidebar ul li.selected {
   /*background: #272c30;*/
   color: #fff !important;
-  background: #377CE4;
+  background: $col-bg;
   color: black;
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
 }
 
 #sidebar ul li:not(.selected):hover {
-  background: #377CE4;
+  background: $col-bg;
   color: #ffffff;
   opacity: 0.8;
 }
@@ -351,7 +346,7 @@ body {
 }
 
 #sidebar ul li .fa-table {
-  color: #377CE4;
+  color: $col-bg;
 }
 
 #sidebar ul li.selected .fa-table {
@@ -434,7 +429,7 @@ h4.modal-title {
 #input-row-number {
   border: 0px none;
   font-size:12px;
-  color:#5B5C59;
+  color:$col-text;
   line-height:21px;
   margin-top: 5px;
 }
@@ -552,7 +547,7 @@ div#output.empty {
 /* Is this being used?*/
 #sidebar-modal-results td textarea,
 #results td textarea {
-  color: #5B5C59 !important;
+  color: $col-text !important;
   font-size: 12px;
 }
 
@@ -1063,7 +1058,7 @@ select#db_type.form-control.input-sm {
 }
 
 .modal-body div.row button {
-  background-color: #377CE4;
+  background-color: $col-bg;
   color: #ffffff;
   padding-left: 15px;
   padding-right: 15px;
