on hover feedback for 'delete bookmark' button

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -609,6 +609,12 @@ div.reactable-pagination-button-container {
   padding: 2px;
 }
 
+.hover-highlight {
+  &:hover {
+    color: darkgray;
+  }
+}
+
 div.reactable-pagination-button-container:hover {
   opacity: 1;
 }
